# phelps

./: .gitignore  Cargo.toml  flake.nix
backend/: Cargo.toml
backend/src/: build.rs  build_server.rs  build_service.rs  config.rs  editor_protocol.rs  editor_service.rs  event.rs  http_service.rs  lib.rs  main.rs  notes_service.rs  package.rs  router.rs  service.rs  system_world.rs
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  NoteContent.tsx  NotePage.css  NotePage.tsx  api.ts  graph.ts  index.css  main.tsx  reducer.ts  socket.ts
frontend/src/components/: BacklinksSidebar.tsx  CitationFooter.tsx  NoteContent.tsx  NotePage.tsx
frontend/src/styles/: julia_mono.css  layout.css  new_computer_modern.css  text.css
src/: build.rs  config.rs  lib.rs  main.rs  package.rs  system_world.rs
