[package]
name = "phelps"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
directories = "6.0.0"
ego-tree = "0.10.0"
flate2 = "1.1.2"
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = [ "client" ] }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-util = { version = "0.1.16", features = ["client-legacy", "http1", "http2"] }
markup5ever = "0.35.0"
notify-debouncer-full = "0.6.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
petgraph = { version = "0.8.2", features = ["stable_graph"] }
pin-project = "1.1.10"
scraper = "0.24.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
tar = "0.4.44"
tempfile = "3.21.0"
thiserror = "2.0.16"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "net", "signal", "sync"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
toml = "0.9.5"
tower = "0.5.2"
tower-async = { version = "0.2.0", features = ["make"] }
tower-http = { version = "0.6.6", features = ["cors"] }
typst = "0.14.0"
typst-html = "0.14.0"
typst-kit = { version = "0.14.0", default-features = false, features = ["fonts", "embed-fonts"] }
uuid = { version = "1.18.1", features = ["serde"] }
walkdir = "2.5.0"
